@@ -20,7 +20,8 @@
 ?>
 <?php
 	require_once "include/config.inc.php";
-
+	require_once "include/scripts.inc.php";
+	
 	$page["title"] = "S_NETWORK_MAPS";
 	$page["file"] = "maps.php";
 
